<resources>
    <string name="app_name">ejercicio individual 11</string>

    <string name="sCharmander">Charmander</string>
    <string name="btnTintCharmander">#D50000</string>

    <string name="sBulbasaur">Bulbasaur</string>
    <string name="btnTintBulbasaur">#03C80B</string>

    <string name="sSquirtle">Squirtle</string>
    <string name="btnTintSquirtle">#0091EA</string>

    <string name="sElegir">Elegir</string>
    <string name="sPokemonSeleccionado">Pokémon Seleccionado</string>
    <string name="sPokemon">Pokémon</string>
    <string name="sAceptar">Aceptar</string>

    <string name="sCancelar">Cancelar</string>

    <string name="sConfirmar">Confirmar</string>

    <string name="sBienvenida">¡Bienvenido al mundo Pokémon!</string>

    <string name="sEntrenador">Imagen del entrenador</string>
    <string name="sEvo1">Evolución 1</string>
    <string name="sEvo2">Evolución 2</string>
    <string name="sEvo3">Evolución 3</string>

</resources>